[metadata]
name = ObjectDetection_Yolov3
description = A wrapper for Yolov3 for easy use in Google Colab
author = Robert Nies
license = MIT
license_file = LICENSE
url = https://github.com/RobertJN64/ObjectDetection_Yolov3
author_email = robertjnies@gmail.com
version = 0.0.1
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = ObjectDetection_Yolov3
python_requires = >=3.7
include_package_data = True
install_requires =
    requests
    matplotlib
    wget
    opencv-python==4.5.5.64